# pesto-clipboard

./: CLIPBOARD_SYNC_IMPLEMENTATION.md  README.md  app.py  daemon.py  pyproject.toml  requirements.txt
backend/: .gitignore  base_listener.py  go.mod  go.sum  history.py  main.go  service.py  wayland_listener.py  x11_listener.py
backend/cmd/pesto-server/: main.go
backend/docs/: docs.go
backend/internal/config/: database.go
backend/internal/docs/: swagger.json  swagger.yaml
backend/internal/dto/: clipboard_item.go  clipboard_item_input.go
backend/internal/handlers/: clipboard_item_handler.go
backend/internal/models/: clipboard_item.go
backend/internal/repositories/: clipboard_item_repository.go
backend/internal/routes/: routes.go
backend/internal/services/: clipboard_item_service.go
backend/pkg/middleware/: openapi_validator.go
backend/pkg/routers/: router_info.go
backend/pkg/swagger/: swagger.go
backend/pkg/utils/: utils.go
core/: models.py  settings.py
frontend/: README.md  README_API.md  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/config/: app_config.dart
frontend/lib/models/: clipboard_item.dart
frontend/lib/providers/: viewmodel_provider.dart
frontend/lib/screens/: ClipboardListScreen.dart  clipboard_list_screen.dart
frontend/lib/services/: api_service.dart  clipboard_item_service.dart  clipboard_monitor.dart  clipboard_monitor_service.dart  clipboard_provider.dart  clipboard_service.dart  (+2 more)
frontend/test/: api_service_test.dart  api_service_test.mocks.dart  viewmodel_test.dart  widget_test.dart
ui/: tray.py  window.py
(+18 files in other folders)
